--- a/server/templates/light_sen.html
+++ b/server/templates/light_sen.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-
+    <h1>{{light_name}}</h1>
+    <h2>{{"Current Status: "+curr_status}}</h2>
 </body>
 </html>
