--- a/server/templates/light_sen.html
+++ b/server/templates/light_sen.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>{{light_name}}</h1>
-    <h2>{{"Current Status: "+curr_status}}</h2>
+    <h2>{{"Current Status: LUL"+current_light}}</h2>
 </body>
 </html>
