--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -13,7 +13,7 @@
 
     <section id="Appliances">
         {% for light_name, curr_status in light_sensors.items() %}
-            <a href={{ url_for('show_light_info', name=light_name, status=curr_status)}}>{{ light_name +" "+ curr_status }}</a>
+            <a href={{ url_for('show_light_info', light_name=light_name)}}>{{ light_name +" "+ curr_status }}</a>
         {% endfor %}
     </section>
 
