Playing around with html

--- a/server/templates/light_sen.html
+++ b/server/templates/light_sen.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <h1>{{light_name}}</h1>
-    <h2>{{"Current Status: LUL"+current_light}}</h2>
+    <h2>{{current_status}}</h2>
+    <dev>PLOTLY</dev>
+    <h2 class="info">Info</h2>
+    <ul>
+        <li>Avg?</li>
+        <li>Max?</li>
+        <li>Min?</li>
+    </ul>
 </body>
 </html>
