--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -29,13 +29,25 @@ Home
             {{light_name}}:
         </div>
         <div class="col-xs-6 float-left">
-            <a href={{ url_for('show_light_info', light_name=light_name)}}>
+            <a href="{{ url_for('show_light_info', light_name=light_name)}}">
                 {{curr_status}}
 {% if curr_status == 'ON' %}
                 <img src="{{url_for('static', filename='images/light-bulb-ON.png')}}" width="50" alt="ON"/>
 {% else %}
                 <img src="{{url_for('static', filename='images/light-bulb-OFF.png')}}" width="50" alt="OFF"/>
 {% endif %}
+            </a>
+        </div>
+    </div>
+{% endfor %}
+{% for temp_name, curr_temp in temp_sensors.items() %}
+    <div class="row">
+        <div class="col-xs-6 float-left">
+            {{temp_name}}:
+        </div>
+        <div class="col-xs-6 float-left">
+            <a href="{{ url_for('show_temp_info', temp_name=temp_name)}}">
+                {{curr_temp}} °F
             </a>
         </div>
     </div>
