--- a/server/templates/temp_sen.html
+++ b/server/templates/temp_sen.html
@@ -5,6 +5,37 @@
     <title></title>
 </head>
 <body>
-
+    <h1>{{temp_name}}</h1>
+    <h2>{{temp_now}}</h2>
+    <div>
+        {% for id in ids %}
+        <h3>{{id}}</h3>
+        <div id="{{id}}"></div>
+        {% endfor %}
+    </div>
+    <h2 class="info">Info</h2>
+    <ul>
+        <li>Avg?</li>
+        <li>Max?</li>
+        <li>Min?</li>
+    </ul>
 </body>
+<footer>
+    <!-- D3.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- Plotly.js -->
+    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+
+    <script type="text/javascript">
+        var graphs = {{graphJSON | safe}};
+        var ids = {{ids | safe}};
+        for(var i in graphs) {
+            Plotly.plot(ids[i], // the ID of the div, created above
+                        graphs[i].data,
+                        graphs[i].layout || {});
+        }
+    </script>
+</footer>
 </html>
