--- a/server/templates/light_sen.html
+++ b/server/templates/light_sen.html
@@ -13,12 +13,12 @@
         <div id="{{id}}"></div>
         {% endfor %}
     </div>
-    <h2 class="info">Info</h2>
+    <!-- <h2 class="info">Info</h2>
     <ul>
-        <li>Avg?</li>
-        <li>Max?</li>
-        <li>Min?</li>
-    </ul>
+        <li>Avg: {{avg}}</li>
+        <li>Max: {{max}}</li>
+        <li>Min: {{min}}</li>
+    </ul> -->
 </body>
 <footer>
     <!-- D3.js -->
