--- a/server/templates/temp_sen.html
+++ b/server/templates/temp_sen.html
@@ -13,12 +13,12 @@
         <div id="{{id}}"></div>
         {% endfor %}
     </div>
-    <h2 class="info">Info</h2>
+    <!-- <h2 class="info">Info</h2>
     <ul>
         <li>Avg?</li>
         <li>Max?</li>
         <li>Min?</li>
-    </ul>
+    </ul> -->
 </body>
 <footer>
     <!-- D3.js -->
