--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -18,7 +18,7 @@ Home
 {% block content %}
 <div class="jumbotron text-center">
   <h1>HomeChecker</h1>
-  <p>Some sub-header stuff goes here.</p> 
+  <p>As-needed home automation</p> 
 </div>
 
 
