--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block metas %}
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="refresh" content="1"/>
 {% endblock %}
 
 
