--- a/server/templates/light_sen.html
+++ b/server/templates/light_sen.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="10"/>
     <title></title>
 </head>
 <body>
